# main/http_server/axe-os/src/app/services/system.service.ts
@@ -165,6 +165,7 @@ export class SystemApiService {
         isUsingFallbackStratum: 0,
         useFallbackStratum: 0,
         poolConnectionInfo: "IPv4 (TLS)",
+        primaryPoolError: "",
         frequency: 485,
         actualFrequency: 485,
         version: "v2.12.0",
